# Regime-Aware-Explainable-Multi-Horizon-Forecasting-with-Monte-Carlo

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  VNINDEX_Daily.csv  pyproject.toml  requirements-bayesian.txt  requirements-lock.txt  requirements.txt  run_benchmark.py  run_daily.bat  start_ui.bat
config/: market_filter_config.yaml  model_config.yaml  target_config.yaml
configs/: benchmark_distribution_full.yaml  benchmark_distribution_laptop.yaml  gpu_research.yaml  laptop.yaml  laptop_vb.yaml  research.yaml
docs/: architecture_review.md  bayesian_validation.md  current_monitoring.md  distribution_oos_benchmark.md  investor_guide_vi.md  leakage_prevention.md  methodology.md  model_card.md  nontechnical_outlook.md  operations.md  references.md  reproducibility.md  technical_report.md  uncertainty_decomposition.md  variational_bayes_methodology.md  variational_bayes_upgrade_audit.md
incoming/: README.md
outputs/: audit_before_upgrade.md  best_hyperparameters.csv  bootstrap_confidence_intervals.csv  clean_vnindex_data.csv  current_regime_forecast.csv  ensemble_best_weights.csv  ensemble_oof_predictions.csv  ensemble_weight_trials.csv  feature_importance.csv  financial_metrics.csv  financial_metrics_by_horizon.csv  forecast_metrics.csv  future_consensus.csv  future_forecasts.csv  hmm_regime_summary.csv  hybrid_best_hyperparameters.csv  hybrid_feature_importance.csv  hybrid_tuning_trials.csv  metrics_by_horizon.csv  model_ranking.csv  model_selection_audit.csv  model_selection_parameters_audit.csv  pairwise_dm_tests.csv  predictions.csv  quantile_metrics.csv  regime_summary.csv  split_summary.csv  test_stability_by_year.csv  tuning_trials.csv
scripts/: compare_advi_nuts.py  forecast_latest_vb.py  generate_reports.py  plot_regime_head_results.py  reproduce_latest.sh  run_current_monitor.sh  run_gpu_research.sh  run_laptop.sh  run_laptop_vb.sh  run_regime_pipeline.py  run_research.sh  summarize_vb_results.py  update_readme_results.py  validate_advi_with_nuts.py
src/: __init__.py  benchmark.py  breadth_features.py  calibration.py  data.py  ebm_multihorizon.py  ensemble.py  feature_registry.py  feature_validation.py  features.py  hybrid.py  hybrid_tuning.py  market_filter.py  metrics.py  models.py  pipeline.py  plots.py  report.py  research.py  targets.py  tuning.py  uncertainty.py  validation.py
tests/: test_backtest_lag.py  test_bayesian_regime_head.py  test_bootstrap.py  test_calibration.py  test_causality_extended.py  test_config_inheritance.py  test_current_monitor.py  test_data_loader.py  test_data_merge_and_metrics.py  test_distribution_forecast.py  test_egarch_filter.py  test_evaluation_contracts.py  test_filtered_hmm.py  test_hmm_alignment.py  test_ingest.py  test_leakage.py  test_markdown.py  test_market_filter.py  test_monte_carlo.py  test_monte_carlo_extended.py  test_no_leakage.py  test_oos_distribution_benchmark.py  test_purged_split.py  test_reproducibility.py  test_smoke_pipeline.py  test_state_alignment.py  (+4 more)
(+387 files in other folders)
