[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raemf-mc"
version = "0.3.0"
description = "Regime-Aware Explainable Multi-Horizon Forecasting with Variational Bayes and Monte Carlo for VN-Index"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nguyen Hoai Nam" }]
license = { text = "MIT" }
keywords = ["VN-Index", "regime", "EGARCH", "EBM", "Monte Carlo"]
dependencies = [
  "numpy>=2.2,<3",
  "pandas>=2.3,<3",
  "scikit-learn>=1.8,<2",
  "scipy>=1.17,<2",
  "matplotlib>=3.10,<4",
  "PyYAML>=6,<7",
  "xgboost>=3.2,<4",
  "hmmlearn>=0.3,<0.4",
  "arch>=8,<9",
  "interpret-core>=0.7,<0.8",
]

[project.optional-dependencies]
dev = ["pytest>=9,<10", "ruff>=0.14,<0.15"]
ui = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]
# torch: GPU-first primary VB backend (install the CUDA build from pytorch.org
# for GPU support). pymc/arviz: reference backend + NUTS validation.
bayesian = ["torch>=2.4", "pymc>=5.20,<7", "arviz>=0.20,<2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
